8239926: Shenandoah: Shenandoah needs to mark nmethod's metadata

Reviewed-by: rkennke, shade